Created search.html, search.php and updated styles.css file.

--- a/UI/search.html
+++ b/UI/search.html
@@ -13,7 +13,7 @@
 
 
 <div id="searchBar">
-    <form id="form">
+    <form id="form" action="search.php" method="get">
       <input id="search" name="search" type="text" value="" placeholder="Search Seekr or type a URL..."></input>
       <button class="button-3" type="button" onclick="window.location.href = 'resultsPage.html';">Search</button>
     </form>
