--- a/prototype/search.html
+++ b/prototype/search.html
@@ -14,7 +14,7 @@
 
 <div id="searchBar">
     <form id="form" action="search.php" method="get">
-      <input id="search" name="search" type="text" value="" placeholder="Search Seekr or type a URL..."></input>
+      <input id="search" name="search" type="text" value="" placeholder="Enter your keywords here..."></input>
       <button class="button-3" type="button" onclick="window.location.href = 'resultsPage.html';">Search</button>
     </form>
 </div>
