checkboxes added for AND OR and NOT

--- a/UI/search.html
+++ b/UI/search.html
@@ -15,7 +15,9 @@
 <div id="searchBar">
     <form id="form" action="search.php" method="get">
       <input id="search" name="search" type="text" value="" placeholder="Search Seekr or type a URL..."></input>
-      <button class="button-3" type="button" onclick="window.location.href = 'resultsPage.html';">Search</button>
+      <button class="button-3" type="button" onclick="window.location.href = 'resultsPage.html';">Search</button><br>
+      <label for="andCheck">AND</label>
+      <input id="andCheck" name="andCheckbox" type="checkbox" value="andCheck"></input><label for="orCheck"> OR</label><input id="orCheck" name="orCheck" type="checkbox" value="orCheck"></input><label for="notCheck"> NOT</label><input id="notCheck" name="notCheck" type="checkbox" value="orCheck"></input>
     </form>
 </div>
 </body>
